--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,36 @@
 @import "tailwindcss";
-@plugin "daisyui" {
-    themes: all;
+@plugin "daisyui";
+@plugin "daisyui/theme" {
+  name: "midaisyuix";
+  default: true;
+  prefersdark: true;
+  color-scheme: "dark";
+  --color-base-100: oklch(28% 0.091 267.935);
+  --color-base-200: oklch(37% 0.146 265.522);
+  --color-base-300: oklch(42% 0.199 265.638);
+  --color-base-content: oklch(93% 0.032 255.585);
+  --color-primary: oklch(87% 0 0);
+  --color-primary-content: oklch(14% 0 0);
+  --color-secondary: oklch(83% 0.128 66.29);
+  --color-secondary-content: oklch(26% 0.079 36.259);
+  --color-accent: oklch(89% 0.196 126.665);
+  --color-accent-content: oklch(27% 0.072 132.109);
+  --color-neutral: oklch(54% 0.245 262.881);
+  --color-neutral-content: oklch(97% 0.014 254.604);
+  --color-info: oklch(54% 0.245 262.881);
+  --color-info-content: oklch(97% 0.014 254.604);
+  --color-success: oklch(64% 0.2 131.684);
+  --color-success-content: oklch(98% 0.031 120.757);
+  --color-warning: oklch(64% 0.222 41.116);
+  --color-warning-content: oklch(98% 0.016 73.684);
+  --color-error: oklch(59% 0.249 0.584);
+  --color-error-content: oklch(97% 0.014 343.198);
+  --radius-selector: 2rem;
+  --radius-field: 1rem;
+  --radius-box: 2rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 2px;
+  --depth: 1;
+  --noise: 0;
 }
